# probable-robot

./: .gitignore  pyproject.toml
app/: cli.py  controllers.py  database.py  main.py  models.py  views.py
app/cli/: asset.py  transaction.py
app/models/: __init__.py  acquisition_type.py  asset.py  income_event.py  portfolio_manager.py  purchase_lot.py  sale_lot_pl.py  sales_pl.py  transfer_fee_pl.py  wallet.py  wallet_transfer.py
tests/: conftest.py  test_cli_asset.py  test_models.py
tests/models/: test_purchase_lot.py
